[package]
name = "tokenipsum"
version = "0.1.0"
edition = "2021"
description = "Mock LLM API server for testing - generates fake but structurally accurate responses"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jannisai/tokenipsum"
homepage = "https://github.com/jannisai/tokenipsum"
documentation = "https://docs.rs/tokenipsum"
readme = "README.md"
keywords = ["llm", "mock", "testing", "api", "openai"]
categories = ["development-tools::testing", "simulation"]

[lib]
name = "tokenipsum"
path = "src/lib.rs"

[[bin]]
name = "tokenipsum"
path = "src/main.rs"

[dependencies]
# Web server
axum = { version = "0.8", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
fastrand = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"

# Async streaming
futures = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
unused_async = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
needless_pass_by_value = "allow"
single_match_else = "allow"
derivable_impls = "allow"
format_push_string = "allow"
map_unwrap_or = "allow"
